--- a/projects/negative_image/negative_image.adoc
+++ b/projects/negative_image/negative_image.adoc
@@ -2,12 +2,13 @@
 :stylesheet: ubuntu.css
 :linkattrs:
 :source-highlighter: pygments
+[.text-justify]
 
 == Negative Region With OpenCV
 
 === Introduction
 
-In the old times, when the cameras used an analogic technology, it was common to see some films wich contained negatives images of a picture. In this images, the dark points turn bright, and the bright points turn dark, as you can see in the <<negative_figure>> figure. This effect occour due chemical processes in the film. But today, with digital cameras, this effect isn't commonly seen. However, there are some cases where is intended to have a negative image, like in medicine applications.
+In the old times, when the cameras were made from an analogic technology, it was common to see some films which had negatives images of a picture. In this negatives images, the dark points of a picture are turned bright, and the bright points are turned dark, as you can see in the <<negative_figure>> figure. This effect occour due chemical processes in the film. But today, with digital cameras, this effect isn't commonly seen. However, there are some cases where is intended to have a negative image, like in medicine applications.
 
 --
 .Eiffel Tower
@@ -17,11 +18,11 @@ image::./images/eiffel.jpg[320,320,align="center",text-align="center"]
 image::./images/entire_negative_eiffel.jpg[320,320,align="center",text-align="center"]
 --
 
-This project will show a simple program that takes an image file and convert it in a negative image. Moreover, there will be the possibility of choose the region that the program will apply the modification. For this, the user must give the image file name and two points. These points will define a rectangular region, and this region will be processed to have the negative effect.
+This project will show a simple program that takes an image file and convert it in a negative image. Moreover, there will be the possibility of user choose the region that the program will apply the modification. For this, the user must give the image file name and two points. These points will define a rectangular region, and this region will be processed to have the negative effect.
 
 === Implemetation with OpenCV C++
 
-We will work with two types of images: A grayscale and a colour image. We can implement a code that takes an grayscale image and change the pixels to form a negative image. In this case, each pixel is represented by a byte, wich the value 0 (0b00000000) represent no bright (black colour) and the value 255 (0b11111111) represents the high level of brightness (white color). Observing the binary representation, if you want to turn a white pixel in black, just apply the logical operation *not*, bit by bit. In the same way, if you apply the operation _not_ in a black pixel, it will be white. This rule can be applicate for any value in a pixel.  In case of colour image, the same rule is valid for each _R_, _G_ and _B_ pixel: apply the _not_ operation, and you will take a negative value.
+We can work with two types of images: A grayscale and a colour image. In the case of grayscale image, to form a negative image, we need to apply the _not_ logical operation. Observing the binary representation, if you have a white pixel, its value is given by 255 (0b11111111). So, applying the _not_ operation, we will obtain the 0 (0b00000000) value response, representing a black pixel. In the same way, if you apply the operation _not_ in a black pixel, it will be white. This rule can be applied for any value in a pixel, and in case of colour image, the same rule is valid for each _R_, _G_ and _B_ pixel: apply the _not_ operation, and you will take a negative value of each layer.
 
 The next C++ code show one way to have a negative from a colour image:
 
@@ -31,6 +32,15 @@ The next C++ code show one way to have a negative from a colour image:
 ----
 include::codes/negative_image.cpp[]
 ----
+
+==== How the code works?
+
+To obtain the wished behavior, the next steps are made:
+
+
+plantuml::diagram/diagram1.puml["png"]
+
+
 
 
 For any suggestion or correction, please contact me: felipeomar.c@gmail.com
