--- a/instalacoes_eletricas/instalacoes.adoc
+++ b/instalacoes_eletricas/instalacoes.adoc
@@ -114,7 +114,7 @@ Quando a concessionária fornece a energia elétrica diretamente em baixa tensã
 .Esquema de Ligação em Baixa Tensão.
 image::alimentacao-baixa-tensao.png[50%]
 
-Nessa situação, a concessionária se responsabiliza pela manutenção e operação do sistema até o _ponto de entrega_. A patir do ponto de entrega, torna-se responsabilidade do consumidor a devida instalação dos componentes. Algumas variações da <<alimentacao-baixa-tensao>>podem ser encontradas. Por exemplo, no Rio Grando do Norte, para instalações de baixa tensão, a concessionária estipula o ponto de entrega na entrada do medidor. 
+Nessa situação, a concessionária se responsabiliza pela manutenção e operação do sistema até o _ponto de entrega_. A patir do ponto de entrega, torna-se responsabilidade do consumidor a devida instalação dos componentes. Algumas variações da esquema de ligação podem ser encontradas. Por exemplo, no Rio Grando do Norte, para instalações de baixa tensão, a concessionária estipula o ponto de entrega na entrada do medidor. 
 
 Após o _Ramal de Entrada_, temos o dispositivo de medição em conjunto com os dispositivos de comando e proteção. A saída desse conjunto caracteriza a origem da instalação elétrica. É a partir do ponto de origem que as regras da norma NBR 5410 devem ser aplicadas.
 
