Testando retorno do uso do asciidoctor

--- a/instalacoes_eletricas/instalacoes.adoc
+++ b/instalacoes_eletricas/instalacoes.adoc
@@ -122,4 +122,4 @@ Após o _Ramal de Entrada_, temos o dispositivo de medição em conjunto com os 
 == Projetos-Exemplo
 
 
-WARNING: Site em construção...
+WARNING: Site em construção... Alterações Drásticas Por vir...
